--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "unit4"
+name = "scripts"
 version = "0.1.0"
 description = ""
 authors = ["Yuliya Volobueva <volobueva.juli@gmail.com>"]
