--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,30 @@
 stages:
-- docker
-- linting
-- build
+  - docker
+  - linting
+  - build
 
 services:
-- docker:24.0.5-dind
+  - docker:24.0.5-dind
 
 variables:
-- DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_TLS_CERTDIR: "/certs"
 
 build-docker:
-image: docker:24.0.5
-  stages: docker
+  image: docker:24.0.5
+  stage: docker
   only:
     changes:
-    - poetry.lock
-    - pyproject.toml
-    - env.yml
-    - Dockerfile
-    - .github/workflows/ci.yml
-  before_scripts:
+      - poetry.lock
+      - pyproject.toml
+      - env.yml
+      - Dockerfile
+      - .github/workflows/ci.yml
+  before_script:
     - docker info
-    - docker login $CI-REGISTRY_USER -p $CI_REGISTRY_PASSWORD
+    - docker login $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
   script:
-    - docker build -t $CI_REGISTRY/$CI-REGISTRY_USER/test:latest .
-    - docker push $CI_REGISTRY/$CI-REGISTRY_USER/test:latest
+    - docker build -t $CI_REGISTRY/$CI_REGISTRY_USER/test:latest .
+    - docker push $CI_REGISTRY/$CI_REGISTRY_USER/test:latest
 
 default:
-  - image $CI_REGISTRY/$CI-REGISTRY_USER/test:latest
-
-  
+  - image $CI_REGISTRY/$CI_REGISTRY_USER/test:latest
