--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build and push Docker image
+        runs:
+          using: 'node20'
         uses: docker/build-push-action@v2
         with:
           context: .
