--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,12 @@ jobs:
         run: poetry install
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: image=moby/buildkit:v0.11.0
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+      - name: Build
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
