--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-          source $HOME/.poetry/env
-
-      - name: Install project dependencies
-        run: poetry install
+      - name: Install and Setup Poetry
+        before_install:
+          - pip install poetry
+        install:
+          - poetry install
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
