--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,47 +18,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install and Setup Poetry
-        run: |
-          pip install poetry
-          poetry install
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: image=moby/buildkit:v0.11.0
-
-      - name: Build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/$GITHUB_REPOSITORY:latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-name: Upload Python Package
-
-on:
-  push:
-    branches: []
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install and Setup Poetry
-        run: |
-          pip install poetry
-          poetry install
+        run: poetry install
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
