--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,23 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install and Setup Poetry
+      - name: Install and configure Poetry
+            uses: snok/install-poetry@v1
+            with:
+              version: 1.3.4
+              virtualenvs-create: true
+              virtualenvs-in-project: true
+
+      - name: Set up cache
+        uses: actions/cache@v2
+        id: cached-poetry-dependencies
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
         run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
